--- a/continuous_probabilistic_methods.ipynb
+++ b/continuous_probabilistic_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bea75d0d",
+   "id": "80a5cd75",
    "metadata": {},
    "source": [
     "# Continuous Probabilistic Methods Exercises\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2057a8c8",
+   "id": "8d56e807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "73b47cb8",
+   "id": "b3f506ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1323fa",
+   "id": "3061c155",
    "metadata": {},
    "source": [
     "---\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a308f2ce",
+   "id": "5fe08bd4",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8dbef711",
+   "id": "67fa14b7",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "55ddbe32",
+   "id": "b05755ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d253d9cb",
+   "id": "9e8c5842",
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11fce231",
+   "id": "8b8fcc3c",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "54d8f5fe",
+   "id": "43135554",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5096f174",
+   "id": "310be94d",
    "metadata": {},
    "source": [
     "The outlier on 12/31/17 makes sense; all values seem to be within reasonable limits. However, the outlier on 11/21/17 has a negative value for `Flyers`, which doesn't make sense since you can't have a negative amount of physical objects. Therefore, it makes sense to me to keep the outlier on 12/31/17 and to either get rid of or fix the outlier on 11/21/17 by changing it to a positive number since that was probably a mistake in data entry.\n",
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3831dafa",
+   "id": "00b7b245",
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3274d1a4",
+   "id": "3c02a7f3",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe40596",
+   "id": "c780ec5a",
    "metadata": {},
    "source": [
     "2/11/17 has a temperature of 212 which does not make sense because that would mean a catastrophic event occurred and I doubt updating the lemonade sales for the day would be on any survivors' to-do lists. Even if the csv was updated automatically it's unlikely this occurred since there are still lemonade sales after that date, suggesting human life did not come to an end, so I would definitely not use this value. Some options could include dropping the record entirely, using forward- or backfill, or using the mean temperature of the days surrounding that record.\n",
@@ -1799,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "90fddfc4",
+   "id": "c4505bab",
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c46c7a00",
+   "id": "8f6fd4de",
    "metadata": {},
    "source": [
     "When using a multiplier of 3, the only lower-bound outlier is on 11/21/17 which was the day with a negative value for `Flyers`. This doesn't make sense so I wouldn't keep any of the lower-bound outliers with a multiplier of 3.\n",
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9887d160",
+   "id": "4180f601",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd44bd4",
+   "id": "4ab90c4d",
    "metadata": {},
    "source": [
     "My sentiments are the same as when the multiplier was 1.5; I would only drop the first and last 4 records in the dataframe above (2/11/17 and 7/1-4/2017).\n",
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd8049a4",
+   "id": "1b2018d4",
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7dd459",
+   "id": "c887b2af",
    "metadata": {},
    "source": [
     "I see that Sales does not appear to be normally distributed, but I'm not sure if this is just because of the outliers. I want to look at it a little closer without those outliers."
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e97722eb",
+   "id": "c4916b3a",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e54829",
+   "id": "9835ea1e",
    "metadata": {},
    "source": [
     "Looks like Sales is also normally distributed, except for those pesky outliers. I'll go ahead and include it in my list of normally distributed columns."
@@ -2117,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "79d44357",
+   "id": "600a85b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ddd54596",
+   "id": "19d3a1f8",
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9cfe00b3",
+   "id": "4aea2cc1",
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2cf25cbe",
+   "id": "4706f03a",
    "metadata": {},
    "outputs": [
     {
@@ -3644,10 +3644,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73e12ce",
+   "id": "31fc3b0f",
    "metadata": {},
    "source": [
-    "Most of the records identified as outliers seem plausible to me. The only outliers I might want to drop are the same as before: those records where Temperature==212, Flyers==-38, Sales.isin(143, 158, 235, 534).\n",
+    "Most of the records identified as outliers seem plausible to me. The only outliers I might want to drop or change are the same as before: those records where Temperature==212, Flyers==-38, Sales.isin(143, 158, 235, 534).\n",
     "\n",
     "### 3. Now use a 3 sigma decision rule to isolate the outliers in the normally distributed columns from `lemonade.csv`"
    ]
@@ -3655,7 +3655,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8de82a8a",
+   "id": "657890b7",
    "metadata": {},
    "outputs": [
     {
@@ -3892,7 +3892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05ea6a5",
+   "id": "b0bd5f99",
    "metadata": {},
    "outputs": [],
    "source": []
