--- a/time_series_anomaly_detection.ipynb
+++ b/time_series_anomaly_detection.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "3bcb172e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e5cf7df4",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "c6e8e9ca",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "4        2    Teddy           2  2018-01-08  2018-05-17  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "185fe15c",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "4        2    Teddy           2  2018-01-08  2018-05-17  WebDev-Java  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "64e2afbb",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "       854, 855, 744, 893, 148, 894, 513, 630, 308, 951, 953, 980])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,231 +412,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "14a3cc7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>path</th>\n",
-       "      <th>ip</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>program_id</th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>end_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-01-26</td>\n",
-       "      <td>09:55:03</td>\n",
-       "      <td>/</td>\n",
-       "      <td>97.105.19.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Hampton</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-09-22</td>\n",
-       "      <td>2016-02-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-01-26</td>\n",
-       "      <td>09:56:02</td>\n",
-       "      <td>java-ii</td>\n",
-       "      <td>97.105.19.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Hampton</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-09-22</td>\n",
-       "      <td>2016-02-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-01-26</td>\n",
-       "      <td>09:56:05</td>\n",
-       "      <td>java-ii/object-oriented-programming</td>\n",
-       "      <td>97.105.19.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Hampton</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-09-22</td>\n",
-       "      <td>2016-02-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-01-26</td>\n",
-       "      <td>09:56:06</td>\n",
-       "      <td>slides/object_oriented_programming</td>\n",
-       "      <td>97.105.19.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Hampton</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-09-22</td>\n",
-       "      <td>2016-02-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>2018-01-26</td>\n",
-       "      <td>10:14:47</td>\n",
-       "      <td>/</td>\n",
-       "      <td>97.105.19.61</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Arches</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-02-04</td>\n",
-       "      <td>2014-04-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>847201</th>\n",
-       "      <td>2021-04-21</td>\n",
-       "      <td>15:20:12</td>\n",
-       "      <td>classification/classical_programming_vs_machin...</td>\n",
-       "      <td>96.8.130.134</td>\n",
-       "      <td>692</td>\n",
-       "      <td>Darden</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2020-07-13</td>\n",
-       "      <td>2021-01-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>847202</th>\n",
-       "      <td>2021-04-21</td>\n",
-       "      <td>15:20:12</td>\n",
-       "      <td>classification/scale_features_or_not.svg</td>\n",
-       "      <td>96.8.130.134</td>\n",
-       "      <td>692</td>\n",
-       "      <td>Darden</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2020-07-13</td>\n",
-       "      <td>2021-01-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>847203</th>\n",
-       "      <td>2021-04-21</td>\n",
-       "      <td>15:20:14</td>\n",
-       "      <td>classification/project</td>\n",
-       "      <td>96.8.130.134</td>\n",
-       "      <td>692</td>\n",
-       "      <td>Darden</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2020-07-13</td>\n",
-       "      <td>2021-01-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>847204</th>\n",
-       "      <td>2021-04-21</td>\n",
-       "      <td>15:20:18</td>\n",
-       "      <td>classification/acquire</td>\n",
-       "      <td>96.8.130.134</td>\n",
-       "      <td>692</td>\n",
-       "      <td>Darden</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2020-07-13</td>\n",
-       "      <td>2021-01-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>847299</th>\n",
-       "      <td>2021-04-21</td>\n",
-       "      <td>16:30:30</td>\n",
-       "      <td>appendix</td>\n",
-       "      <td>172.125.226.175</td>\n",
-       "      <td>771</td>\n",
-       "      <td>Jupiter</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2020-09-21</td>\n",
-       "      <td>2021-03-30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>115803 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              date      time  \\\n",
-       "0       2018-01-26  09:55:03   \n",
-       "1       2018-01-26  09:56:02   \n",
-       "2       2018-01-26  09:56:05   \n",
-       "3       2018-01-26  09:56:06   \n",
-       "30      2018-01-26  10:14:47   \n",
-       "...            ...       ...   \n",
-       "847201  2021-04-21  15:20:12   \n",
-       "847202  2021-04-21  15:20:12   \n",
-       "847203  2021-04-21  15:20:14   \n",
-       "847204  2021-04-21  15:20:18   \n",
-       "847299  2021-04-21  16:30:30   \n",
-       "\n",
-       "                                                     path               ip  \\\n",
-       "0                                                       /     97.105.19.61   \n",
-       "1                                                 java-ii     97.105.19.61   \n",
-       "2                     java-ii/object-oriented-programming     97.105.19.61   \n",
-       "3                      slides/object_oriented_programming     97.105.19.61   \n",
-       "30                                                      /     97.105.19.61   \n",
-       "...                                                   ...              ...   \n",
-       "847201  classification/classical_programming_vs_machin...     96.8.130.134   \n",
-       "847202           classification/scale_features_or_not.svg     96.8.130.134   \n",
-       "847203                             classification/project     96.8.130.134   \n",
-       "847204                             classification/acquire     96.8.130.134   \n",
-       "847299                                           appendix  172.125.226.175   \n",
-       "\n",
-       "        user_id     name  program_id  start_date    end_date  \n",
-       "0             1  Hampton           1  2015-09-22  2016-02-06  \n",
-       "1             1  Hampton           1  2015-09-22  2016-02-06  \n",
-       "2             1  Hampton           1  2015-09-22  2016-02-06  \n",
-       "3             1  Hampton           1  2015-09-22  2016-02-06  \n",
-       "30           11   Arches           1  2014-02-04  2014-04-22  \n",
-       "...         ...      ...         ...         ...         ...  \n",
-       "847201      692   Darden           3  2020-07-13  2021-01-12  \n",
-       "847202      692   Darden           3  2020-07-13  2021-01-12  \n",
-       "847203      692   Darden           3  2020-07-13  2021-01-12  \n",
-       "847204      692   Darden           3  2020-07-13  2021-01-12  \n",
-       "847299      771  Jupiter           2  2020-09-21  2021-03-30  \n",
-       "\n",
-       "[115803 rows x 9 columns]"
+       "array([  1,  11,  21,  26,  37,  40,  50,  51,  53,  60,  64,  66,  67,\n",
+       "        68,  69,  70,  71,  72,  75,  76,  77,  80,  81,  82,  83,  84,\n",
+       "        85,  87,  90,  91,  92,  93,  94,  95,  96,  97,  98, 101, 102,\n",
+       "        16,  42,  41,  17,  22,  15, 104,  47,  57,  10, 105, 106,  28,\n",
+       "       107,  65,  52,  33,  56, 108,  27,  38,  36, 109, 110, 112, 113,\n",
+       "       114, 115, 139, 140, 141, 143, 144, 146, 147, 148, 149, 150, 151,\n",
+       "       152, 153, 156, 161, 162, 163, 164, 165, 167, 168, 169, 170, 172,\n",
+       "       173, 174, 175, 177, 178, 179,  29,  19, 180,   6,  99,  43,  31,\n",
+       "         7, 181, 138,  35, 142,   5, 155, 154,  88, 209, 210,  18,   3,\n",
+       "        20, 118, 211, 212, 214, 216, 217, 131, 135, 128, 127, 124, 130,\n",
+       "       159,  12, 145, 241, 242, 136, 157, 171, 123,  25, 134, 119, 243,\n",
+       "       244, 245, 246, 160, 248, 252, 254, 255, 120, 257, 279, 280, 281,\n",
+       "        14, 253, 188, 186, 283, 184, 215, 278, 183, 204, 193, 195, 197,\n",
+       "       249, 206, 284, 121, 201, 285, 286, 311, 190, 312, 116, 200, 250,\n",
+       "       187, 256, 230, 220, 313, 223, 314, 225, 228, 240, 219, 316, 231,\n",
+       "       227, 239, 189, 208, 232, 258, 318, 319, 322, 238, 348, 282, 270,\n",
+       "       263, 272, 267, 185, 260, 275, 274, 226, 315, 269, 266, 262, 277,\n",
+       "       273, 265, 264, 271, 261, 198, 234, 126, 396, 398, 288, 293, 306,\n",
+       "       295, 297, 302, 321, 251, 309, 304, 290, 399, 291, 346, 401, 402,\n",
+       "       405, 122, 427, 428, 323, 337, 332, 330, 327, 347, 324, 338, 336,\n",
+       "       328, 333, 331, 335, 344, 299, 329, 341, 334, 325, 459, 296, 326,\n",
+       "       375, 374, 393, 389, 430, 390, 385, 379, 462, 463, 394, 464, 305,\n",
+       "       465, 395, 392, 486, 373, 414, 423, 410, 424, 513, 425, 383, 417,\n",
+       "       416, 415, 413, 419, 426, 515, 437, 451, 458, 433, 435, 445, 457,\n",
+       "       434, 439, 440, 460, 455, 452, 436, 456, 450, 448, 446, 573, 543,\n",
+       "       574, 476, 471, 475, 485, 474, 478, 468, 481, 472, 466, 479, 483,\n",
+       "       473, 482, 480, 469, 358, 593, 477, 447, 610, 495, 489, 611, 512,\n",
+       "       491, 488, 509, 490, 507, 502, 500, 493, 508, 504, 499, 503, 506,\n",
+       "       511, 498, 494, 510, 501, 467, 646, 647, 497, 530, 540, 527, 531,\n",
+       "       524, 516, 521, 538, 523, 532, 519, 542, 384, 528, 537, 517, 649,\n",
+       "       650, 651, 535, 307, 534, 541, 525, 496, 566, 555, 564, 559, 654,\n",
+       "       567, 553, 548, 551, 547, 554, 569, 549, 558, 565, 560, 570, 557,\n",
+       "       571, 556, 616, 586, 584, 580, 575, 561, 581, 585, 588, 576, 589,\n",
+       "       591, 617, 582, 579, 590, 583, 614, 599, 613, 604, 612, 608, 602,\n",
+       "       598, 648, 606, 605, 595, 609, 596, 600, 615, 563, 578, 740, 633,\n",
+       "       642, 632, 677, 635, 643, 631, 630, 626, 623, 741, 637, 640, 624,\n",
+       "       638, 636, 621, 627, 639, 641, 622, 634, 625, 746, 371, 777, 778,\n",
+       "       779, 786, 787, 533, 809, 671, 656, 666, 655, 673, 674, 662, 668,\n",
+       "       667, 812, 657, 817, 658, 664, 670, 660, 628, 852, 853, 695, 691,\n",
+       "       692, 683, 781, 857, 696, 685, 783, 698, 785, 268, 688, 690, 682,\n",
+       "       780, 680, 686, 694, 308, 678, 859, 712, 709, 737, 706, 743, 860,\n",
+       "       730, 733, 705, 747, 732, 693, 784, 701,  13, 763, 751, 760, 748,\n",
+       "       769, 764, 761, 774, 753, 765, 750, 771, 749, 773, 755, 776, 762,\n",
+       "       818, 767, 952, 768, 756, 770])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# identify students accessing curriculum after program end date\n",
-    "logs[(logs.date > logs.end_date) & (logs.name != 'Staff')]"
+    "logs[(logs.date > logs.end_date) & (logs.name != 'Staff')].user_id.unique()"
    ]
   },
   {
